Bug 248478 - Dolphin spams the user with "Missing Plugion - kio_thumbmail" dialogs when focusing .html file with Flash object in it
Summary: Dolphin spams the user with "Missing Plugion - kio_thumbmail" dialogs when fo...
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: thumbnail (other bugs)
Version First Reported In: 4.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 249170 252818 258101 269796 278851 288872 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-20 10:08 UTC by Daniel Buus
Modified: 2011-12-13 11:31 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Testcase to reproduce the bug (58.35 KB, application/x-gzip)
2010-11-17 15:16 UTC, Diego
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Buus 2010-08-20 10:08:59 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                Linux

I have an html file with an embedded Flash object. Konqueror/KHTML doesn't have a Flash plugin apparently, as when I open it, I'm told that there's no plugin found for "Shockwave Flash file", and asked if I'd like to download one from www.adobe.com.

Opting in on that offer brings nothing, but that's not the issue here, the thing is that this dialog is not alone. It's bringing lots of twins, actually as long as the html file has focus in Dolphin, new "Missing Plugin - kio_thumbmail" dialogs will continue to open, until I manage to shift focus to another file :)

Reproducible: Didn't try

Steps to Reproduce:
Create an html file embedding a swf (both must be present).
Focus the html file in Dolphin.
(Probably you'd have to have previews enabled for this type in dolphin settings, I have everything enabled for previews)

Actual Results:  
"Missing Plugin - kio_thumbmail" dialogs will continue to open until you shift focus to another file.

Expected Results:  
If a dialog would open, then just one (and just once) would be expected. Probably you wouldn't even want this kind of dialogs when not actually browsing the web?

OS: Linux (x86_64) release 2.6.34-zen1-daniel
Compiler: cc
Comment 1 Daniel Buus 2010-08-20 10:11:16 UTC
Actually, hovering over it is enough.
Comment 2 Paul Grandperrin 2010-10-12 23:24:17 UTC
I can confirm a very very similar bug on KDE 4.5.1.
My case is not exactly the same:
The html file I use doesn't embed any flash object, instead, it has iframes including other html files.

When I put my mouse over it, it opens a dialog for each included html files called "file:///home/paulg...files/" + $theNameOfTheIncludedHtmlFile + " - kio_thumbmail"

I tried to reproduce this bug on KDE 4.4.5, but it doesn't look to be affected.
Comment 3 Paul Grandperrin 2010-10-12 23:34:28 UTC
I forgot to add that this bug can be a lot more ennoying because sometimes the opened dialogs keeps reopening after I close them, even after I closed dolphin.
Then, I have no choise but to logout from KDE and log in again...
Comment 4 Diego 2010-11-17 12:24:56 UTC
Same here with KDE 4.5.2. Reproducible using for example javadoc (html with frames).
Comment 5 Diego 2010-11-17 15:16:45 UTC
Created attachment 53493 [details]
Testcase to reproduce the bug

Extract the contents of the archive, open the "javadoc" folder and have fun! :)
Comment 6 Diego 2010-11-17 15:17:51 UTC
(In reply to comment #3)
> I forgot to add that this bug can be a lot more ennoying because sometimes the
> opened dialogs keeps reopening after I close them, even after I closed dolphin.
> Then, I have no choise but to logout from KDE and log in again...

As a faster workaround: Ctrl+ESC, search for Dolphin, and kill it.
Comment 7 Diego 2011-01-24 15:02:47 UTC
Same with Android NDK. Extract the archive, browse the doc folder, hover some files, and you'll probably be able to reproduce the problem.
http://dl.google.com/android/ndk/android-ndk-r5-linux-x86.tar.bz2
Comment 8 jonathan_haas 2011-02-18 12:02:27 UTC
Why is this rated minor? Getting spammed with multiple self-reproducing dialogs just when hovering an .htm file (or opening it) is a huge issue, especially if you have to work with them daily.

Closing the Dolphin window or changing the focus doesn't work for me, I need to kill the dolphin process.

Ubuntu 10.10
KDE 4.5.1
Comment 9 Dawit Alemayehu 2011-05-17 20:11:55 UTC
If anyone is up for testing a patch for this issue, you can find it at
https://git.reviewboard.kde.org/r/101365/
Comment 10 David 2011-05-31 18:45:21 UTC
Regarding the patch, anyone know why "This change has been discarded"? Apparently that page is supposed to show reviews, but I'm not seeing them.

By the way, one of this or bug 252818 is a dupe of the other (I'm fond of the one I submitted of course.  It also has the votes)
Comment 11 Dawit Alemayehu 2011-05-31 19:17:33 UTC
(In reply to comment #10)
> Regarding the patch, anyone know why "This change has been discarded"?
> Apparently that page is supposed to show reviews, but I'm not seeing them.

Because one of the khtml developers provided a much smaller fix for the existing generator. See the threads at 

http://lists.kde.org/?t=130653362000004&r=1&w=2

My patch will still be in the review page for those that want to generate HTML thumbnails with QtWebKit instead KHTML.
Comment 12 Diego 2011-06-02 12:04:13 UTC
Maksim, is your patch in 4.6? 4.6.4 is going to be tagged today...
I don't see it in:
https://projects.kde.org/projects/kde/kdelibs/repository/changes/khtml/khtml_part.cpp?rev=KDE%2F4.6
Comment 13 Dawit Alemayehu 2011-06-04 02:37:07 UTC
*** Bug 269796 has been marked as a duplicate of this bug. ***
Comment 14 Dawit Alemayehu 2011-06-04 02:40:10 UTC
*** Bug 258101 has been marked as a duplicate of this bug. ***
Comment 15 Dawit Alemayehu 2011-06-04 02:40:31 UTC
*** Bug 249170 has been marked as a duplicate of this bug. ***
Comment 16 Dawit Alemayehu 2011-06-04 02:42:21 UTC
*** Bug 252818 has been marked as a duplicate of this bug. ***
Comment 17 Philipp A. 2011-06-04 10:34:21 UTC
i have it, too. see random dupe bug ;)

since so many are having it (and the cause is more or less clear),
i'm setting it to confirmed.
Comment 18 Dawit Alemayehu 2011-06-22 04:13:40 UTC
I have re-published the review for my patch since the fix proposed by one of the khtml developers (see comment# 11) has not been committed. Can anyone test the patch from https://git.reviewboard.kde.org/r/101365/ and provide feedback ? The patch is already tested extensively by me, but I would appreciate anyone who compiled KDE from source to try it and let me know.
Comment 19 Diego 2011-06-22 09:13:00 UTC
(In reply to comment #18)
> The patch is already tested extensively by me, but I would appreciate anyone
> who compiled KDE from source to try it and let me know.

Does it apply only on 4.7 or on 4.6 too?
Comment 20 Dawit Alemayehu 2011-06-22 09:55:24 UTC
(In reply to comment #19)
> (In reply to comment #18)
> > The patch is already tested extensively by me, but I would appreciate anyone
> > who compiled KDE from source to try it and let me know.
> 
> Does it apply only on 4.7 or on 4.6 too?

You should be able to apply it to 4.6 too.
Comment 21 Maksim Orlovich 2011-06-22 23:42:30 UTC
Git commit 9cdda935c08b547f63bdc6da32faabcfa2024e0b by Maks Orlovich.
Committed on 28/05/2011 at 17:01.
Pushed by orlovich into branch 'master'.

Don't ask KHTMLRun to handle embedding cases with onlyLocalReferences, we want to
swallow them ourselves given what the mode is for.

Fixes what #248478 turned to (original issue got fixed organically, follow up
comments are technically unrelated)

+ Remove unused return and indent inconsistency while I am at it

BUG: 248478

M  +15   -16   khtml/khtml_part.cpp     
M  +1    -1    khtml/khtml_part.h     

http://commits.kde.org/kdelibs/9cdda935c08b547f63bdc6da32faabcfa2024e0b
Comment 22 Maksim Orlovich 2011-06-22 23:47:37 UTC
Git commit b25d506ed4938eb858654549f0208a4948505fe8 by Maks Orlovich.
Committed on 28/05/2011 at 17:01.
Pushed by orlovich into branch 'KDE/4.7'.

Don't ask KHTMLRun to handle embedding cases with onlyLocalReferences, we want to
swallow them ourselves given what the mode is for.

Fixes what #248478 turned to (original issue got fixed organically, follow up
comments are technically unrelated)

+ Remove unused return and indent inconsistency while I am at it

BUG: 248478

M  +15   -16   khtml/khtml_part.cpp     
M  +1    -1    khtml/khtml_part.h     

http://commits.kde.org/kdelibs/b25d506ed4938eb858654549f0208a4948505fe8
Comment 23 Christoph Feck 2011-07-30 18:23:50 UTC
*** Bug 278851 has been marked as a duplicate of this bug. ***
Comment 24 Christoph Feck 2011-12-13 11:31:34 UTC
*** Bug 288872 has been marked as a duplicate of this bug. ***