Don't ask KHTMLRun to handle embedding cases with onlyLocalReferences, we want to swallow them ourselves given what the mode is for.

Fixes what #248478 turned to (original issue got fixed organically, follow up
comments are technically unrelated)

+ Remove unused return and indent inconsistency while I am at it

BUG: 248478